local-dev/k8s/m2m.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: m2m-demo
  namespace: wegwijs-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: m2m-demo
  template:
    metadata:
      labels:
        app: m2m-demo
    spec:
      containers:
      - name: m2m-demo
        image: k3d-wegwijs-registry:5051/wegwijs-m2m:local
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: m2m-demo
  namespace: wegwijs-demo
spec:
  selector:
    app: m2m-demo
  ports:
  - port: 80
    targetPort: 8080
