local-dev/k8s/nuxt-bff.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nuxt-bff
  namespace: wegwijs-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nuxt-bff
  template:
    metadata:
      labels:
        app: nuxt-bff
    spec:
      containers:
      - name: nuxt-bff
        image: k3d-wegwijs-registry:5051/wegwijs-nuxt-bff:local
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nuxt-bff
  namespace: wegwijs-demo
spec:
  selector:
    app: nuxt-bff
  ports:
  - port: 80
    targetPort: 3000
